rules.v4
# Generated by iptables-save v1.8.7 on Tue May  9 11:08:35 2023
*mangle
:PREROUTING ACCEPT [2885:435256]
:INPUT ACCEPT [2863:431046]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2601:426146]
:POSTROUTING ACCEPT [2601:426146]
COMMIT
# Completed on Tue May  9 11:08:35 2023
# Generated by iptables-save v1.8.7 on Tue May  9 11:08:35 2023
*nat
:PREROUTING ACCEPT [166:13178]
:INPUT ACCEPT [152:10511]
:OUTPUT ACCEPT [20:858]
:POSTROUTING ACCEPT [18:720]
:DOCKER - [0:0]
-A POSTROUTING -o wwan0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o wwan0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 5201 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 5201 -j MASQUERADE
-A DOCKER -p tcp -m tcp --dport 5201 -j DNAT --to-destination 172.17.0.2:5201
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 5201 -j DNAT --to-destination 172.17.0.2:5201
-A DOCKER ! -i docker0 -p udp -m udp --dport 5201 -j DNAT --to-destination 172.17.0.2:5201
COMMIT
# Completed on Tue May  9 11:08:35 2023
# Generated by iptables-save v1.8.7 on Tue May  9 11:08:35 2023
*filter
:INPUT ACCEPT [1785:266463]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1615:261240]
:DOCKER - [0:0]
-A INPUT -i wlp1s0 -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i wlp1s0 -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A INPUT -i wlp1s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wlp1s0 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i wlp1s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i wlp1s0 -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -i wlp1s0 -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i wlp1s0 -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A INPUT -i wlp1s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wlp1s0 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i wlp1s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i wlp1s0 -p tcp -m tcp --sport 53 -j ACCEPT
-A FORWARD -i wlp1s0 -o wwan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlp1s0 -o wwan0 -j ACCEPT
-A FORWARD -i wlp1s0 -o wwan1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlp1s0 -o wwan1 -j ACCEPT
-A FORWARD -i wlp1s0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlp1s0 -o eth0 -j ACCEPT
-A FORWARD -i wlp1s0 -o wwan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlp1s0 -o wwan0 -j ACCEPT
-A FORWARD -i wlp1s0 -o wwan1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlp1s0 -o wwan1 -j ACCEPT
-A FORWARD -i wlp1s0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlp1s0 -o eth0 -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 5201 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 5201 -j ACCEPT
COMMIT
# Completed on Tue May  9 11:08:35 2023
